--- a/todo-list-api/src/main/resources/application.properties
+++ b/todo-list-api/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.application.name=todo-list-ms
+server.port=8081
+spring.h2.console.settings.web-allow-others=true
