--- a/todo-list-api/src/main/resources/application.properties
+++ b/todo-list-api/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 spring.application.name=todo-list-ms
 server.port=8081
 spring.h2.console.settings.web-allow-others=true
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
